editor/recite-tree-sitter/test/corpus/canonical.txt
==================
Canonical Recite fixture
==================
:: marche.default default speaker=élise location=quai location=night
# Shared pressure fixture: stable IDs, interpolation, plural source forms, and markup.
> arrivée.interpolée@55667788990011223344 speaker=élise mood=calm mood=urgent bind=(traveller_name:string=$traveller_name)
  [slow]The tide is turning, {traveller_name}.[/slow]
  ? ask_news@66778899001122334455 bind=(topic:string=$topic) tone=plain
    Tell me about {topic}.
    -> letters
-> END

:: letters
> letters.ledger@0a1b2c3d4e5f60718293 speaker=élise bind=(count:int=$letters_remaining)
  You have one letter.
  | You have {count} letters.
> letters.close@77889900112233445566 speaker=archivist
  The ledger closes.
-> END

---

(source_file
  (block_statement
    (block_marker)
    (hspace)
    (block_name
      (identifier))
    (block_attribute
      (hspace)
      (block_default))
    (block_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (block_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (block_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (newline))
  (comment_line
    (comment_marker)
    (comment_text)
    (newline))
  (line_statement
    (line_marker)
    (hspace)
    (line_name
      (identifier)
      (stable_id))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (grouped_value
            (expression_part
              (binding
                (identifier)
                (type_name
                  (identifier))
                (value
                  (runtime_binding
                    (identifier)))))))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (markup_tag
        (markup_name))
      (prose_content)
      (interpolation
        (placeholder
          (identifier)))
      (prose_content)
      (markup_tag
        (markup_name)))
    (newline))
  (choice_statement
    (indent)
    (choice_marker)
    (hspace)
    (choice_name
      (identifier)
      (stable_id))
    (choice_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (grouped_value
            (expression_part
              (binding
                (identifier)
                (type_name
                  (identifier))
                (value
                  (runtime_binding
                    (identifier)))))))))
    (choice_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start)
      (interpolation
        (placeholder
          (identifier)))
      (prose_content))
    (newline))
  (divert_statement
    (indent)
    (divert_marker)
    (hspace)
    (target)
    (newline))
  (divert_statement
    (divert_marker)
    (hspace)
    (target)
    (newline))
  (blank_line
    (newline))
  (block_statement
    (block_marker)
    (hspace)
    (block_name
      (identifier))
    (newline))
  (line_statement
    (line_marker)
    (hspace)
    (line_name
      (identifier)
      (stable_id))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (grouped_value
            (expression_part
              (binding
                (identifier)
                (type_name
                  (identifier))
                (value
                  (runtime_binding
                    (identifier)))))))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start))
    (newline))
  (plural_line
    (indent)
    (plural_marker)
    (prose_text
      (prose_start)
      (interpolation
        (placeholder
          (identifier)))
      (prose_content))
    (newline))
  (line_statement
    (line_marker)
    (hspace)
    (line_name
      (identifier)
      (stable_id))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (symbol
            (identifier)))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start))
    (newline))
  (divert_statement
    (divert_marker)
    (hspace)
    (target)
    (newline)))
